--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,7 +20,42 @@ env:
   PULUMI_SKIP_UPDATE_CHECK: true
 
 jobs:
+  install-plugins:
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.platform }}
+    steps:
+      - name: Check out source code
+        uses: actions/checkout@master
+      - name: Install Go
+        uses: actions/setup-go@v5
+        with:
+          # Use latest - we only need this for the toolchain
+          go-version: 1.24.x
+      - name: Find pulumi version
+        id: pulumi_version
+        shell: bash
+        run: |
+          GO_MODULE_VERSION=$(go list -m -f '{{.Version}}' github.com/pulumi/pulumi/pkg/v3)
+          GO_VERSION=$(echo "$GO_MODULE_VERSION" | sed 's/^v//')
+          echo "pulumi_version=$GO_VERSION"
+          echo "pulumi_version=$GO_VERSION" >> $GITHUB_OUTPUT
+      - name: Install pulumi
+        uses: pulumi/actions@v5
+        with:
+          pulumi-version: ${{ steps.pulumi_version.outputs.pulumi_version }}
+      - name: Cache plugins
+        uses: actions/cache@v4
+        with:
+          path: ~/.pulumi/plugins
+          key: ${{ matrix.platform }}-plugins
+          restore-keys: |
+            ${{ matrix.platform }}-plugins
+      - name: Install plugins
+        run: make install_plugins
   test:
+    needs: install-plugins
     strategy:
       # Collect all test failures instead of stopping when only one test is failing.
       fail-fast: false
@@ -197,6 +232,13 @@ jobs:
       - name: Shard tests
         run: echo "RUN_TEST_CMD=$(go run github.com/pulumi/shard@0c8eaa6 --total ${{ env.TOTAL_SHARDS }} --index ${{ matrix.shard }} --seed 314 --error-on-name-clash)" >> $GITHUB_ENV
         if: ${{ matrix.platform == 'ubuntu-latest' }}
+      - name: Restore plugins
+        uses: actions/cache/restore@v4
+        with:
+          path: ~/.pulumi/plugins
+          key: ${{ matrix.platform }}-plugins
+          restore-keys: |
+            ${{ matrix.platform }}-plugins
       - name: Test
         run: make test
       - name: Upload coverage reports to Codecov
@@ -226,18 +268,6 @@ jobs:
           version: v2.1
       - name: Lint
         run: make lint
-  version-check:
-    name: Verify Pulumi Version Consistency
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          check-latest: true
   sentinel:
     name: sentinel
     if: github.event_name == 'repository_dispatch' || github.event.pull_request.head.repo.full_name == github.repository
