--- a/mise.toml
+++ b/mise.toml
@@ -4,3 +4,4 @@ go = '1.23'
 # Executable tools
 golangci-lint = '2'
 pulumi = "{{ exec(command='go list -m -f={{.Version}} github.com/pulumi/pulumi/sdk/v3') | trim | replace(from='v', to='') }}"
+terraform = 'latest'
