use same version of golangci-lint on ci

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -265,7 +265,7 @@ jobs:
         uses: golangci/golangci-lint-action@v8
         with:
           skip-cache: true
-          version: v2.1
+          version: 2.5.0
       - name: Lint
         run: make lint
   sentinel:
