--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -270,7 +270,7 @@ jobs:
         run: make lint
   sentinel:
     name: sentinel
-    if: github.event_name == 'repository_dispatch' || github.event.pull_request.head.repo.full_name == github.repository
+    if: always() && (github.event_name == 'repository_dispatch' || github.event.pull_request.head.repo.full_name == github.repository)
     permissions:
       statuses: write
     needs:
@@ -278,6 +278,11 @@ jobs:
     - lint
     runs-on: ubuntu-latest
     steps:
+    - name: Check for failures
+      if: contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
+      run: |
+        echo "One or more dependencies failed or were cancelled"
+        exit 1
     - uses: guibranco/github-status-action-v2@0849440ec82c5fa69b2377725b9b7852a3977e76 # v1.1.13
       with:
         authToken: ${{secrets.GITHUB_TOKEN}}
