--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           # Use latest - we only need this for the toolchain
-          go-version: 1.24.x
+          go-version: 1.25.x
       - name: Find pulumi version
         id: pulumi_version
         shell: bash
@@ -66,7 +66,7 @@ jobs:
         #
         # When we decide to bump our minimum go version, we need to remember to bump the
         # go version in our go.mod files.
-        go-version: [1.24.x]
+        go-version: [1.25.x, 1.26.x]
         platform: [ubuntu-latest, macos-latest, windows-latest]
         feature-flags: ["DEFAULT"]
         # Needs to match TOTAL_SHARDS
